conf/forgejo/forgejo-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: forgejo
  labels:
    app: forgejo

spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: forgejo
        version: 16.0.4
    spec:
      # securityContext:
      #   runAsUser: 1000
      #   runAsGroup: 100
      #   fsGroup: 100
      # nodeSelector:
      #   kubernetes.io/hostname: rpivN
      containers:
        - env:
            - name: FORGEJO__database__PASSWD
              valueFrom:
                secretKeyRef:
                  name: forgejo-secret
                  key: FORGEJO__database__PASSWD
            - name: FORGEJO__server__SSH_PORT
              value: "2222"
            - name: FORGEJO__server__SSH_LISTEN_PORT
              value: "22"
            - name: FORGEJO__database__DB_TYPE
              value: postgres
            - name: FORGEJO__database__HOST
              value: postgresql-db
            - name: FORGEJO__database__NAME
              value: forgejodb
            - name: FORGEJO__database__USER
              value: forgejo
            - name: FORGEJO__database__SSL_MODE
              value: disable
            - name: FORGEJO__mailer__ENABLED
              value: "true"
            - name: FORGEJO__mailer__PROTOCOL
              value: "smtps" # Use "smtp" for 587, "smtps" for 465
            - name: FORGEJO__mailer__SMTP_ADDR
              value: "smtp.gmail.com"
            - name: FORGEJO__mailer__SMTP_PORT
              value: "465"
            - name: FORGEJO__mailer__FROM
              valueFrom:
                secretKeyRef:
                  name: forgejo-secret
                  key: FORGEJO__mailer__FROM
            - name: FORGEJO__mailer__ENVELOPE_FROM
              valueFrom:
                secretKeyRef:
                  name: forgejo-secret
                  key: FORGEJO__mailer__ENVELOPE_FROM                  
            - name: FORGEJO__mailer__USER
              valueFrom:
                secretKeyRef:
                  name: forgejo-secret
                  key: FORGEJO__mailer__USER
            - name: FORGEJO__mailer__PASSWD
              valueFrom:
                secretKeyRef:
                  name: forgejo-secret
                  key: FORGEJO__mailer__PASSWD
            - name: FORGEJO__service__ENABLE_NOTIFY_MAIL
              value: "true"
            # - name: FORGEJO__migrations__ALLOW_LOCALNETWORKS
            #   value: "true"
            # - name: FORGEJO__server__SSH_ALLOW_UNEXPECTED_AUTHORIZED_KEYS
            #   value: "true"
            - name: USER_UID
              value: "1000"
            - name: USER_GID
              value: "100"
            - name: TZ
              value: "America/Denver"
            - name: APP_NAME
              value: "Homelab Git"
            # - name: APP_SLOGAN
            #   value: "Personal Code, Mirrors, and More"
          name: forgejo
          image: codeberg.org/forgejo/forgejo:16.0.4
          ports:
            - containerPort: 3000
              protocol: TCP
              name: forgejo-http
            - containerPort: 22
              protocol: TCP
              name: forgejo-ssh
          volumeMounts:
            # - name: tz-config
            #   mountPath: /etc/localtime
            #   readOnly: true # Mount as read-only for safety
            #   subPath: localtime
            - name: forgejo-volume
              mountPath: /data
          # livenessProbe:
          #   httpGet:
          #     path: /healthcheck
          #     port: forgejo-http
          #   initialDelaySeconds: 20
          #   periodSeconds: 10
      restartPolicy: Always
      volumes:
        - name: forgejo-volume
          persistentVolumeClaim:
            claimName: forgejo-pvc
        # - name: tz-config
        #   hostPath:
        #     path: /etc/localtime
        #     type: FileOrCreate # Optional type, good practice
