conf/forgejo/forgejo-ingress-tls.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect-forgejo
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`forgejo.idcrook.dev`)
      services:
        - name: forgejo-svc
          port: 3000
      middlewares:
        - name: redirect-to-https

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-forgejo

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`forgejo.idcrook.dev`)
      services:
        - name: forgejo-svc
          port: 3000
      middlewares:
#        - name: kube-system-my-traefik-auth-with-exceptions@kubernetescrd
#        - name: tinyauth-tinyauth-middleware@kubernetescrd
  tls:
    certResolver: wildcardresolver

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ssh-forgejo

spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: forgejo-svc
          port: 2222
